修改程序icon，支持设置名称 ip

--- a/Chat/Form1.resx
+++ b/Chat/Form1.resx
@@ -117,4 +117,102 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAKSAAAAEAIACoFQAAFgAAACgAAAApAAAAQAAAAAEAIAAAAAAAgBQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAu7ezQLy4s7+9trYiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAALy4tES+ubRmvLmzi725s7W8ubOlvbmzfry5s1q9ubJIv7qzary5
+        s529ubP/vbmz6wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALy3
+        sVy+ubO7vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+8ubKVAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL64s16+ubTLvbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s80AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAC9ubOnvbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/726s5sAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvLizdr25
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/764soUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvbq0VL+/rxAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL23sli9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/7y5
+        s1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvbmz/725s6++ubRqAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAvbmzxb25s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vrmzz7+/rxAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAC9ubOlvbmz/725s/+9ubPrvbmzfr25s369ubN+vrqzib65tLG9ubLZvbmz/726
+        s1C9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbm0jwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL64
+        tEq9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubPlvbiyj725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubLZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvLy2Kr25s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s82+ubSZvbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+qqqoGAAAAAAAAAAAAAAAAAAAAALy8tiq9ubPVvbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmyk765sre9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/7u7sh4AAAAAAAAAAAAA
+        AAC8vLYqvbmz1b25s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubPDvbqzl725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/v7+vEAAAAAAAAAAAvLy2Kr25s9W9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725svO9ubJ4vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmzfru3s0C9ubN+vbmz/725s/+9ubP/vbmz/725s/+9ubJ0vbq0VL66s7+9ubP/vbmz/725
+        s/+9ubP/vbmz/766s78AAAAAAAAAAAAAAAC9ubOrvbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/766s0K9ubLzvbmz/725s/+9ubP/vbmz/725s/+7t7NAAAAAAAAA
+        AAC9ubP/vbmz/725s/+9ubP/vrqzvwAAAAAAAAAAu7ezQL25s/+9ubP/vbmz/725s/+9ubP/vrmycAAA
+        AAAAAAAAvLy2Kr25s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vLmzob66s5G9ubP/vbmz/725s/+9ubP/vbmz/725s367t7NAvbmztb25s/+9ubP/vbmz/725
+        s/+9ubP/vbq0n765tGq9uLPZvbmz/725s/+9ubP/vbmz/725s8W/qqoMAAAAAAAAAAC9ubN+vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbqzRr25
+        stm9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbm0OgAAAAAAAAAAAAAAAL25s9W9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubPXwbmyIL25s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/7y4
+        s40AAAAAAAAAAAAAAAC8t7M4vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubN+vrqyPr26s/O9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubN+AAAAAAAAAAAAAAAAAAAAAL65
+        tXC9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/++ubSdvbiyMr25s4e9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubOrwri4GAAAAAAAAAAAAAAAAAAAAAAAAAAAvbmzfr25s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9uLLPvrmzdL29tR6+uLRKvLizw725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s9W+urOJvLixSAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC8t7M4vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbm09b25
+        s6+9ubSFvbmyQr25sT6+urNKvLm0WL25s368t7EuAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAC+ubTjvbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s7e9ubO3vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/765s7u8ubKZvrqzv725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubOXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALy4
+        sp+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubN+AAAAAAAAAAC9ubN+vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vrm0MgAAAAAAAAAAvrqzv725s/+9ubP/vbmz/725s/+9ubP/vbmz/7u3tEYAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAu7izWr25s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/726smQAAAAAAAAAAL26smS9ubP/vbmz/725s/+9ubP/vbmz/725s/++ubQyAAAAAAAA
+        AAC9urSfvbmz/725s/+9ubP/vbmz/725s/+8ubKdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvLmzi725s/+9ubP/vbmz/725s/+9ubP/vrqzv725
+        soe9ubKHvrqzv725s/+9ubP/vbmz/725s/+9ubP/vbmz/724s7G+ubRqvbmyk725s/+9ubP/vbmz/725
+        s/+9ubP/vLmz8by8tioAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAvLmzrb25s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubN+AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAvrmz7725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmzfgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvbmz1b25
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s34AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvLmynb25s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725s/+9ubP/vbmz/725tLu8ubFEAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvrqxOr66s4m9ubLZvbmz/725s/+9ubP/vbmz/725
+        s/+9ubP/vbmz/725s/+9ubP/vbmz+b65s529urVYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC8t7I0vbu0aL25s6++urO/vrqzv766s7+9urSfvrmzdL66
+        s0q/v78EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/////++AAAD////Hj4AAAP///gAPgAAA///4AA+A
+        AAD//+AAB4AAAP//4AADgAAA///AAAOAAAD5/4AAAYAAAPhwgAAAgAAA/AAAAACAAAD8AAAAAIAAAPgA
+        AAAAgAAA8AAAAACAAADgAIHBgIAAAMAAgcHBgAAAwAABgIGAAADAAEAAA4AAAIAAIAADgAAAgAAwAA+A
+        AACAAAgAH4AAAIAABwB/gAAAgAAAf/+AAACAAAAH/4AAAIDwOA//gAAAwPA4D/+AAADAABAf/4AAAOAA
+        AD//gAAA8AAAf/+AAAD4AAD//4AAAPwAAf//gAAA/wAH//+AAAD/8H///4AAAA==
+</value>
+  </data>
 </root>
